<resources>
    <string name="app_name">Mera Room</string>
    <string name="select_image">Select a image</string>
    <string name="saste_par_mahanga">Saste par mahanga</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="login">Login</string>
    <string name="term_and">Terms and</string>
    <string name="country_code">+91</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_msg">We have Sent an OTP in Your\nMobile Number +91*******</string>
    <string name="proceed_to_login">Proceed To Login</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="name">Name</string>
    <string name="mail_id">Mail Id</string>
    <string name="proceed">Proceed</string>
    <string name="search">Search</string>
    <string name="booking">Bookings</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="support">Support</string>
    <string name="boys_hostel">Boys Hostel</string>
    <string name="boys_pg">Boys PG</string>
    <string name="Girls_hostel">Girls Hostel</string>
    <string name="girls_pg">Girls PG</string>
    <string name="boys_hostel1">Boys\nHostel</string>
    <string name="boys_pg1">Boys\nPG</string>
    <string name="Girls_hostel1">Girls\nHostel</string>
    <string name="girls_pg1">Girls\nPG</string>
    <string name="popular">Popular</string>
    <string name="whatsnew">What\'s New</string>
    <string name="demo_hostel_name">Mittal Heights</string>
    <string name="demo_hostel_namewith_type">Mittal Heights (Boys hostel)</string>
    <string name="demo_hostel_address">New Resonance Building and city mallkota 324005</string>
    <string name="demo_hostel_type">Boys Hostel</string>
    <string name="demo_hostel_type_bracket">(Boys Hostel)</string>
    <string name="welcome">Welcome</string>
    <string name="demo_name">Robert William</string>
    <string name="exit">Exit Confirmation!</string>
    <string name="msg_exit">Are you sure want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_by_institute">Search By Your Institute</string>
    <string name="demo_institute_name">Resonance</string>
    <string name="my_bookings">My Bookings</string>
    <string name="explore_more">Explore More</string>
    <string name="condition">conditions</string>
    <string name="booking_mode">Booking Mode</string>
    <string name="offline">Offline</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="demo_mobile">Mobile- xxxxx7111</string>
    <string name="demo_time">Timing:- 12:23am</string>
    <string name="demo_booking_date">Date Of Booking:- DD-MM-YYYY</string>
    <string name="owner_details_contact">Owner Detail\nContact xxxxxx5868</string>
    <string name="rupees">\u20B9</string>
    <string name="mera_wallet">Mera Money</string>
    <string name="demo_wallet_amount"> \u20B9 00.00</string>
    <string name="refer_and_earn">Refer And Earn</string>
    <string name="transaction_history">Transactions History</string>
    <string name="demo_neg_amount">- \u20B9 200</string>
    <string name="demo_pos_amount">+ \u20B9 200</string>
    <string name="add_to_wallet">Added To Wallet</string>
    <string name="demo_used_for_booking">Used For Booking</string>
    <string name="kharcha_kam_suvidha_jyada">Kharcha Kam Suvidha Jyada</string>
    <string name="get_started">Get Started</string>
    <string name="check">Check</string>
    <string name="find_your_space">Find Your Space</string>
    <string name="search_by_location">Search By Location</string>
    <string name="set_distance_range">Set Distance Range</string>
    <string name="go">GO</string>
    <string name="recommended_places_for_you">Recommended Places For You</string>
    <string name="or">OR</string>
    <string name="demo_price_range">Price - \u20B9 14000-18,000</string>
    <string name="demo_distance">200 metres</string>
    <string name="room_details">Room Details</string>
    <string name="mess_facility">Mess Facility</string>
    <string name="direction">Direction</string>
    <string name="book_online">Book Online</string>
    <string name="check_room_availability">Check Room Availability</string>
    <string name="book_offline">Book Offline</string>
    <string name="demo_phone">XXXXXX2568</string>
    <string name="demo_email">robert@gmail.com</string>
    <string name="logout">Log Out</string>
    <string name="refer_and_earn1">Refer and earn</string>
    <string name="recently_visited">Recently Visited</string>
    <string name="faqs">FAQs</string>
    <string name="question">Can I Book A Multiple rooms\nwith same id ?</string>
    <string name="hostel_details">Hostel Details</string>
    <string name="view_all">View All</string>
    <string name="select_service">Select Service</string>
    <string name="demo_rating">4.6</string>
    <string name="customer_review">Customer\'s Reviews</string>
    <string name="demo_review">Nice service provided by this hostel during complete study time period of my son. Will recommended all to choose this one. Also staff behavious is too good.</string>
    <string name="your_full_name">Your full name</string>
    <string name="alternate_mobile_number">Alternate mobile number</string>
    <string name="register"><u>Register</u></string>
    <string name="email_address">E-mail address</string>
    <string name="select_state">Select state</string>
    <string name="select_city">Select city</string>
    <string name="dont_have_ac">Don\'t have account?</string>
    <string name="search_hostel_pg">Search Hostel/PG</string>
    <string name="search_hostel_pg1">Search hostel/pg</string>
    <string name="list_your_service">List Your Service</string>
    <string name="rooms_available">Rooms Available</string>
    <string name="demo_hostel_derscription">Mittal Heights generally for Resonance students and Motion students</string>
    <string name="select_your_need">Select Your Need</string>
    <string name="details">Details</string>
    <string name="you_havent_booked_yet">You haven\'t booked yet</string>
    <string name="book_now">Book Now</string>
    <string name="profile">Profile</string>
    <string name="select_distance_range">Select Distance Range</string>
    <string name="under500">Under 500 meters</string>
    <string name="underonekilo">Under 1 Kilo meter</string>
    <string name="undertwokilo">Under 2 Kilo meters</string>
    <string name="underthreekilo">Under 3 Kilo meters</string>
    <string name="no_range">No Range</string>
    <string name="filter">Filter</string>
    <string name="under10000">Under 10,000</string>
    <string name="under8000">Under 8000</string>
    <string name="between10k15k">Between 10,000-15,000</string>
    <string name="between15k20k">Between 15,000-20,000</string>
    <string name="between20k30k">Between 20,000-30,000</string>
    <string name="book_with_payment">Book with Payment</string>
    <string name="book_now_pay_later">Book Now Pay Later</string>
    <string name="room_description">Room are designed to provide complete environment for a student all facilities are available</string>
    <string name="single_bed_ac_room">Single-Bed Ac Room</string>
    <string name="ten_k">10,000</string>
    <string name="single_bed_cooler_room">Single-Bed Cooler Room</string>
    <string name="eight_k">8,000</string>
    <string name="double_bed_ac_room">Double-Bed Ac Room</string>
    <string name="eighteen_k">18,000</string>
    <string name="double_bed_cooler_room">Double-Bed Cooler Room</string>
    <string name="fifteen_k">15,000</string>
    <string name="mess_details">Mess Details</string>
    <string name="mess_description">Our facility is so good, We provide a hygenic environment for a student and also healthy food.</string>
    <string name="breakfast_time">Breakfast time</string>
    <string name="breakfast_time1">6am-9am</string>
    <string name="lunch_time">Lunch time</string>
    <string name="lunch_time1">12pm-3pm</string>
    <string name="tea_time">Tea time</string>
    <string name="tea_time1">5pm-6pm</string>
    <string name="dinner_time">Dinner time</string>
    <string name="dinner_time1">7pm-9pm</string>
    <string name="milk_time">Milk time</string>
    <string name="milk_time1">9pm-10pm</string>
    <string name="enter_name">Enter name</string>
    <string name="visiting_date">Visiting Date</string>
    <string name="demo_date">22-11-2021</string>
    <string name="single_bed">Single Bed</string>
    <string name="double_bed">Double Bed</string>
    <string name="ac_room">Ac Room</string>
    <string name="cooler_room">Cooler Room</string>
    <string name="demo_room_price">Price - \u20B9 <font color='#06A6AC'>14000</font> / Month</string>
    <string name="and_pay_at_hostel"><![CDATA[& Pay at Hostel]]></string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="success_msg">Your booking has confirmed, Please visit in your given date or before it.</string>
    <string name="bed_type">Bed Type</string>
    <string name="room_type">Room Type</string>
    <string name="booking_id">Booking Id</string>
    <string name="booking_id1">Booking Id :</string>
    <string name="demo_booking_id">FE34DG</string>
    <string name="success">Success</string>
    <string name="give_benefit_to_friends">Give benefit to your friends</string>
    <string name="how_it_works">How it works ?</string>
    <string name="invite_your_friend">Invite your friend</string>
    <string name="just_share_your_referral_link">Just share your referral link</string>
    <string name="they_register_on_app">Thery register on app</string>
    <string name="with_bonus_500rupees">with 500 Sign-up bonus from mera room</string>
    <string name="three">3</string>
    <string name="you_get_59_rupees">You get 59 on  your wallet</string>
    <string name="usable_in_booking">usable in booking bill payment</string>
    <string name="demo_link">http://www.aamoditsolutions.com/</string>
    <string name="copy_text">Copy</string>
    <string name="refer_friends_now">Refer Friends Now</string>
    <string name="notification">Notification</string>
    <string name="two_new_notification">2 New Notifications</string>
    <string name="clear">Clear</string>
    <string name="mon_date">Mon 22 Nov 12:08pm</string>
    <string name="notification_msg">Hello Rebert, Grab extra discount on PG Booking</string>
    <string name="grab_now">Grab Now</string>
    <string name="notification_msg2">Robert, Earn a referral commission by inviting your friend in mera room</string>
    <string name="chat_with_us">Chat With Us</string>
    <string name="request_callback">Request Call Back</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="request">Request</string>
    <string name="type_message_here">Type message here</string>
    <string name="mera_room_support">Mera Room Support</string>
    <string name="offers">Offers</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="hi_robert_grab_extra_dicount">Hi Robert, Grab extra discount on PG bookings</string>
    <string name="no_network_message">Please check your network connection.</string>
    <string name="no_internet">Oops! No Internet</string>
    <string name="address">Address</string>
    <string name="coupon_list">Coupon List</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="apply">Apply</string>
    <string name="available_coupon_list">Available coupon list</string>
    <string name="credit_transactions">Credit transactions</string>
    <string name="debit_transactions">Debit transactions</string>
    <string name="select_address">Select Address</string>
    <string name="select_location">Select Location</string>
    <string name="change">Change</string>
    <string name="confirm_location">Confirm Location</string>
</resources>