<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_20">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/app_color"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginTop="@dimen/dp_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imgCross"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:src="@drawable/ic_cross"
                android:padding="@dimen/dp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <CheckBox
                android:id="@+id/chkCredit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/credit_transactions"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/gray4"
                android:fontFamily="@font/roboto_medium"
                android:buttonTint="@color/app_color"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginHorizontal="@dimen/dp_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

            <CheckBox
                android:id="@+id/chkDebit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/debit_transactions"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/gray4"
                android:fontFamily="@font/roboto_medium"
                android:buttonTint="@color/app_color"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginHorizontal="@dimen/dp_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chkCredit"/>

            <TextView
                android:id="@+id/txtApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginTop="@dimen/dp_40"
                android:paddingHorizontal="@dimen/dp_20"
                android:paddingVertical="@dimen/dp_5"
                android:background="@drawable/rounded_corner_appcolor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chkDebit"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>