<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grayish1"
        android:clickable="true">

        <View
            android:id="@+id/viewHeader"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_55"
            android:background="@color/app_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:src="@drawable/ic_back_without_bg"
            android:adjustViewBounds="true"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_7"
            android:padding="@dimen/dp_5"
            android:onClick="onClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtBookingHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coupon_list"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/viewHeader"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consPromoCode"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewHeader">

            <EditText
                android:id="@+id/txtCouponCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_coupon_code"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/dp_16"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginHorizontal="@dimen/sp_20"
                android:paddingHorizontal="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_8"
                android:background="@drawable/rounded_corner5_app_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txtApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/dp_15"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginHorizontal="@dimen/sp_20"
                android:paddingHorizontal="@dimen/dp_20"
                android:paddingVertical="@dimen/dp_8"
                android:onClick="onClick"
                android:background="@drawable/rounded_corner5_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCouponCode"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtAvailableCouponCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_coupon_list"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/dp_16"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingHorizontal="@dimen/dp_10"
            android:paddingVertical="@dimen/dp_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/consPromoCode"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyCouponList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAvailableCouponCode"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>