<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:text="@string/select_address"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:elevation="5dp"
            app:iconifiedByDefault="false"
            app:queryHint="Search address"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            map:mapType="normal"
            tools:context="ukac.teesaad.w9521088.MapActivity"
            android:layout_marginBottom="-15dp"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintBottom_toTopOf="@+id/consLocation"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/sp_15"
            android:paddingBottom="@dimen/dp_20"
            android:background="@drawable/rounded_top_corner_20_white"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/txtLocTitle"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:text="@string/select_location"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_10"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/dp_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txtChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:textAllCaps="true"
                android:layout_marginEnd="@dimen/dp_15"
                android:paddingHorizontal="@dimen/dp_20"
                android:paddingVertical="@dimen/dp_3"
                android:background="@drawable/rounded_border10_gray_fill_bluish"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/imgMapsAndFlags"/>

            <ImageView
                android:id="@+id/imgMapsAndFlags"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:src="@drawable/ic_location"
                android:layout_marginTop="@dimen/dp_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLocTitle"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/txtAreaName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_18"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_15"
                app:layout_constraintStart_toEndOf="@+id/imgMapsAndFlags"
                app:layout_constraintEnd_toStartOf="@+id/txtChange"
                app:layout_constraintTop_toTopOf="@+id/imgMapsAndFlags"
                app:layout_constraintBottom_toBottomOf="@+id/imgMapsAndFlags"/>

            <TextView
                android:id="@+id/txtAddressLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_12"
                android:layout_marginTop="@dimen/dp_5"
                app:layout_constraintTop_toBottomOf="@+id/imgMapsAndFlags"/>

            <TextView
                android:id="@+id/txtConfirmLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm_location"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:paddingVertical="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:onClick="onClick"
                android:background="@drawable/rounded_corner25_app_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAddressLine"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>