<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable name="index"
            type="Integer" />

        <!--<variable
            name="item"
            type="com.aamod.bukish.models.CategoryItemResBean" />-->

        <variable name="OnItemClickListener"
            type="com.travel.guide.adapters.PopularAdapter" />

        <!--<import type="android.view.View" />-->

        <!--<import type="com.medicalworld.extra.Constants" />-->

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/layRoot"
        android:layout_width="@dimen/dp_180"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardElevation="@dimen/dp_3"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginHorizontal="@dimen/dp_5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardImage"
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_70"
                app:cardCornerRadius="@dimen/dp_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgProperty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/demo_hostel"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtHostelName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/demo_hostel_name"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"
                android:paddingHorizontal="@dimen/dp_10"
                android:maxLines="1"
                app:layout_constraintStart_toEndOf="@+id/cardImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txtPropertyType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/demo_hostel_type"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/app_color"
                android:fontFamily="@font/roboto_bold"
                android:paddingHorizontal="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_14"
                app:layout_constraintStart_toEndOf="@+id/cardImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHostelName"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_18"
                android:background="@drawable/rounded_corner10_green"
                android:layout_marginTop="@dimen/dp_6"
                android:paddingHorizontal="@dimen/dp_5"
                app:layout_constraintStart_toEndOf="@+id/cardImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPropertyType">

                <ImageView
                    android:id="@+id/imgCheck"
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:src="@drawable/ic_click"
                    android:adjustViewBounds="true"
                    android:layout_marginStart="@dimen/dp_5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/txtCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check"
                    android:textSize="@dimen/sp_10"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingHorizontal="@dimen/dp_6"
                    app:layout_constraintStart_toEndOf="@+id/imgCheck"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtPropertyAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/demo_hostel_address"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/gray"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="@dimen/dp_10"
                android:maxLines="1"
                android:paddingVertical="@dimen/dp_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardImage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>